# laplace-equation-stripped

./: CMakeLists.txt  README.md  main.cpp
initial/: settings.ini
mpi_openmp/: CMakeLists.txt  main.cpp
openmp/: CMakeLists.txt  main.cpp
result/: 3D.py  fault.py
tbb/: CMakeLists.txt  main.cpp
